# oddspark-solver

./: .env.example  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py  db.py  exceptions.py
api/app/models/: base.py  buildings.py  core.py  items.py  sparks.py
api/app/routes/v1/: __init__.py  sparks.py
api/migrations/: env.py
api/migrations/versions/: 65cdfbb33e7a_adding_attack_type_relationship.py  70f3ce306c20_init_spark_models.py  7f9c1e7eaf95_spark_tables_unique_name_constraints.py  91cd8bafb74e_creating_item_table.py  b90b810f5ad6_init.py
api/scripts/: start.sh
